--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jquery-datetimepicker": "^2.5.4",
+    "normalize.css": "^5.0.0",
+    "store": "^1.3.20"
   }
 }
